--- a/public/index.html
+++ b/public/index.html
@@ -20,7 +20,7 @@
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo.png"/>
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json"/>
-    <title>Paris Caretaker Services</title>
+    <title>PA 2025</title>
 </head>
 <body>
 <noscript>You need to enable JavaScript to run this app.</noscript>
